// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the <InclusionsTableRow> component matches its snapshot when props.disabled = false 1`] = `
.emotion-0 td {
  color: rgb(72, 72, 72);
  -webkit-text-decoration: none;
  text-decoration: none;
}

<table>
  <tbody>
    <tr
      class="emotion-0"
    />
  </tbody>
</table>
`;

exports[`the <InclusionsTableRow> component matches its snapshot when props.disabled = true 1`] = `
.emotion-0 td {
  color: rgb(136, 136, 136);
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
}

<table>
  <tbody>
    <tr
      class="emotion-0"
    />
  </tbody>
</table>
`;
